<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formulario">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="19dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/label_reporte_formulario"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/edtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_nombre_formulario"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtNombre"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_apellido_formulario"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtApellido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/label_reporteopinion_formulario"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edtOpinion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/descripcion_nombre_formulario"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/edtApellido"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="yes"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/descripcion_apellido_formulario"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <EditText
        android:id="@+id/edtOpinion"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="106dp"
        android:contentDescription="@string/descripcion_comentario_formulario"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="242dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/descripcion_evaluacion_formulario"
        android:numStars="5"
        android:rating="0.0"
        android:stepSize="1.0"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/descripcion_boton_formulario"
        android:text="@string/label_btn_enviar_formulario"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_evaluar_formulario"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtOpinion" />

</androidx.constraintlayout.widget.ConstraintLayout>