<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:context=".MapsActivity" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/micro"
        android:layout_width="100dp"
        android:layout_height="119dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/boton_posicion"
        android:src="@drawable/ic_btn_speak_now"
        android:tag="Boton para reconocimiento de voz"
        app:layout_anchorGravity="bottom|left" />

    <ImageButton
        android:id="@+id/imgbtn_bath"
        android:layout_width="101dp"
        android:layout_height="62dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:contentDescription="@string/boton_bath"
        app:srcCompat="@drawable/ic_toilet" />

    <ImageButton
        android:id="@+id/imgbtn_gps"
        android:layout_width="101dp"
        android:layout_height="62dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:contentDescription="@string/boton_posicion"
        app:srcCompat="@drawable/ic_position" />

    <ImageButton
        android:id="@+id/imgbtn_parking"
        android:layout_width="101dp"
        android:layout_height="62dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:contentDescription="@string/boton_parking"
        app:srcCompat="@drawable/ic_parking" />

    <!-- <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_botons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/boton_opciones"
        android:tag="@string/boton_opciones"
        app:layout_anchor="@+id/map"
        app:layout_anchorGravity="right|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton_posicion"
            android:tag="Boton para determinar su posicion actual"
            app:fab_icon="@drawable/ic_position" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/bath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton_bath"
            android:tag="Boton para encontrar baño más cercano"
            app:fab_icon="@drawable/ic_toilet" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton_parking"
            android:tag="Boton para encontrar estacionamiento más cercano"
            app:fab_icon="@drawable/ic_parking" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu> -->


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/white"
        android:contentDescription="@string/bottom_Sheet"
        android:tag="Informacion previo del lugar elegido"
        app:behavior_hideable="true"
        app:behavior_peekHeight="70dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <include layout="@layout/preview_informacion" />

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>
